# vslam_homework

chapter_1/: pa1.md
chapter_1/cmake_practise/: CMakeLists.txt
chapter_1/cmake_practise/include/: hello.h
chapter_1/cmake_practise/src/: hello.cpp  useHello.cpp
chapter_2/: .gitignore  chapter_2.md
chapter_2/eigen_practise/: CMakeLists.txt
chapter_2/eigen_practise/src/: practise2.cpp  practise3.cpp
chapter_3/: practise_3.md
chapter_3/draw_trajectory/: CMakeLists.txt
chapter_3/draw_trajectory/src/: draw_trajectory.cpp  trajectory_error.cpp
